TAG: mrkcoordload-5-0-0-7
TAG: mrkcoordload-5-0-0-6
DATE: 8/02/2012
STAFF: sc
RELEASE: dev
CHANGES: US#92/93 Bug fixes
1) Remove \n in sanity report for missing data/column check
2) report on command line when new source/display

TAG: mrkcoordload-5-0-0-5
DATE: 7/s0/2012
STAFF: sc
RELEASE: dev
CHANGES: US#3 dn US#11 - bug fixes from testing
1) mrkcoordload.config.default - Added INVALID_CHR_RPT=${RPTDIR}/invalid_chr.rpt
2) checkColumns.py - don't strip the tokens before checking for numColumns
	removed some debug
3) mrkcoordQC.py - Added support for INVALID_CHR_RPT, exclude annot evid
4) mrkcoordQC.sh - Added support for INVALID_CHR_RPT

TAG: mrkcoordload-5-0-0-4
TAG: mrkcoordload-5-0-0-3
DATE: 7/26/2012
STAFF: sc
RELEASE: dev
CHANGES: US#3 dn US#11
1. Added checkColumns.py, mrkcoordQC.py, mrkcoordQC.sh
    runMrkCoordQC
    Note that mrkcoordQC.py will need to keep track of good
	lines (not rejected because of QC errrors) and write out
	to a load ready file when we run QC from the load 
2. mrkcoordload.sh - Added RUNTYPE=live default, Added commented
	out code to support running QC from the load
	Added case insensitivity for determining build
	Added commented out code to deal with last run file
	Changed config value of input file - will need to do again
	  when we run QC from the load
3. createInputFiles.py - changed config value of input file
4. mrkcoordload.config.default - added config to support QC
5. Install - added permissions code for running QC scripts from
	hobbiton and sym link input file creation to hobbiton
	from lindon

TAG: mrkcoordload-5-0-0-2
DATE: 6/5/2012
STAFF: sc
RELEASE: dev
CHANGES: 
1. createInputFiles.py - added support of naming files with collection
   abbreviation 
2. mrkcoordload.sh - added setting  abbreviation in the environment

TAG: mrkcoordload-5-0-0-1
DATE: 6/5/2012
STAFF: sc
RELEASE: dev
CHANGES: TR7106 initial tag
